# npanalyst

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .~lock.Basketed.csv#  053018_areas.csv  Dockerfile  README.md  Taskfile.yaml  base.prof  cli.py  core.py  default.cfg  default.json  environment.yml  main.py  pyproject.toml  pyrtree.py  setup.py
.task/checksum/: pre-commit
cytoscape/: hifan_cytoscape_style.xml
metabolate/: cli.py  core.py
misc/: DrawingRTree.ipynb  MakeGraph.ipynb  default.cfg  mp_workers.py  plotting.py  thinking.py
npanalyst/: LICENSE  __init__.py  activity.py  cli.py  community_detection.py  config.py  configuration.py  convert.py  core.py  createCluster.py  createCommunities.py  createSubclusters.py  create_community.py  default.json  exceptions.py  logging.py  ms_two.py  msutils.py  setup.py  utils.py
src/npanalyst/: activity.py  cli.py  community_detection.py  core.py  logging.py  msutils.py
tests/: test_activity.py
tests/integration/: bioactivity_mapping.py  gnps_input.py  mzmine_input.py  mzml_input.py  test_bioactivity_mapping.py  test_community_graph.csv  test_gnps_input.py  test_mzmine_input.py  test_mzml_input.py
tests/integration/data/: Activity.csv  GNPS_Activity.csv  GNPS_expected_basketed.csv  network_mzml.graphml  table_mzml.csv
tests/integration/data/communities/0/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/1/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/10/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/11/: network.graphml  table.csv
tests/integration/data/communities/12/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/13/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/14/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/15/: network.graphml
tests/integration/data/communities/16/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/17/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/18/: network.graphml
tests/integration/data/communities/19/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/2/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/3/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/4/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/5/: assay.csv  network.graphml  table.csv
tests/integration/data/communities/6/: assay.csv  network.graphml  (+1 more)
tests/unit/: test_activity.py  test_msutils.py
(+9 files in other folders)
