[project]
name = "npanalyst"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.8",
  "joblib>=1.4.2",
  "networkx>=3.4.2",
  "numpy>=2.2.3",
  "pandas>=2.2.3",
  "pygraphviz>=1.14",
  "pymzml>=2.5.11",
  "python-louvain>=0.16",
  "rtree>=1.3.0",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
]

[project.scripts]
npanalyst = "npanalyst.cli:cli"

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.9.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
