[project]
name = "npanalyst"
dynamic = ["version"]
description = "..."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.8",
  "joblib>=1.4.2",
  "networkx>=3.4.2",
  "numpy>=2.2.3",
  "pandas>=2.2.3",
  "pygraphviz>=1.14",
  "pymzml>=2.5.11",
  "python-louvain>=0.16",
  "rtree>=1.3.0",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
]

[project.scripts]
npanalyst = "npanalyst.cli:cli"

[tool.uv]
package = true

[tool.bumpversion]
current_version = "1.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "build(version): {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "src/npanalyst/__init__.py"

[dependency-groups]
dev = [
  "bump-my-version>=0.32.2",
  "pre-commit>=4.1.0",
  "pytest>=8.3.4",
  "ruff>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/npanalyst/__init__.py"
